--- a/helpdesk/package.json
+++ b/helpdesk/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "mysql": "^2.18.1",
     "nodemailer": "^6.8.0",
     "path": "^0.12.7",
     "socket.io": "^4.5.4"
